Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12586

CMD does not retain its title

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.4
    • None
    • December 2016

    Description

      When the title of a cmd prompt is set from within a script, it should stay on the prompt.

      See https://build.reactos.org/builders/Test%20KVM%20AHK/builds/793/steps/test/logs/stdio
      Search for: ReactOS Build Environment 2.0

      and it would be nice if it displays the command it's executing like windows does.

      Attachments

        1. cmd.patch
          1 kB
          Mark Jansen
        2. cmd.patch
          2 kB
          Mark Jansen
        3. cmd.patch
          2 kB
          Mark Jansen

        Issue Links

          Activity

            People

              learn_more Mark Jansen
              learn_more Mark Jansen
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: