[CMD] Show the executed command in the title, do not restore the old title when it is modified. CORE-12586

svn path=/trunk/; revision=73478